[package]
name = "supervisors"
version = "0.1.4"
edition = "2024"
authors = ["Santosh Sahoo"]
license = "MIT"
description = "A simple process supervisor for Rust applications." 
repository = "https://github.com/santoshsahoo/supervisors"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
axum = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
hyper = "1.6.0"
clap = { version = "4.5.40", features = ["derive"] }

